--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>Page Title</head>
-  <meta charset="utf-8">
+  <head>
+    <title>Page Title</title>
+    <meta charset="utf-8">
+  </head>
   <body>
     <p>Hello, world!</p>
   </body>
