--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       style="text-decoration: none;">
         <img src="images/small_twitter_logo.png">
       </a>
-      You should follow Learn Enough on Twitter <a href="http://twitter.com/learnenough" target="_blank">here</a>
+      You should follow Learn Enough on Twitter 
+      <a href="http://twitter.com/learnenough" target="_blank">here</a>
     </p>
    
     <p>
