--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
@@ -64,6 +64,16 @@
         <td>table data</td>
         <td>include a table data cell</td>
       </tr>
+      <tr>
+        <td><code>head</code></td>
+        <td>header</td>
+        <td>marks header in HTML doc</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>division</td>
+        <td>sets page divisions apart</td>
+      </tr>
     </table>
     
     <h2>Inline Elements</h2>
@@ -82,6 +92,34 @@
         <td>make emphasized text</td>
         <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
         <td><em>technical sophistication</em></td>
+      </tr>
+      <tr>
+        <td><code>strong</code></td>
+        <td>strong</td>
+        <td>make strong text</td>
+        <td><code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code></td>
+        <td><strong>at least a billion people</strong></td>
+      </tr>
+      <tr>
+        <td><code>a</code></td>
+        <td>anchor</td>
+        <td>make hyperlink</td>
+        <td><code>&lt;a href="http://learnenough.com/"&gt;Learn Enough&lt;/a&gt;</code></td>
+        <td><a href="http://learnenough.com/">Learn Enough</a></td>
+      </tr>
+      <tr>
+        <td><code>img</code></td>
+        <td>image</td>
+        <td>include an image</td>
+        <td><code>&lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code></td>
+        <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>sets inline segments apart</td>
+        <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
+        <td><span>Call me Ishmael.</span></td>
       </tr>
     </table>
   </body>
