Add lists to moby_dick.html and tag defenitions to tags.html

--- a/tags.html
+++ b/tags.html
@@ -67,12 +67,22 @@
       <tr>
         <td><code>head</code></td>
         <td>header</td>
-        <td>marks header in HTML doc</td>
+        <td>mark header in HTML doc</td>
       </tr>
       <tr>
         <td><code>div</code></td>
         <td>division</td>
-        <td>sets page divisions apart</td>
+        <td>set page divisions apart</td>
+      </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>ordered list</td>
+        <td>list numbered in sequence</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>unordered list</td>
+        <td>defaults to bullet point list</td>
       </tr>
     </table>
     
@@ -117,9 +127,16 @@
       <tr>
         <td><code>span</code></td>
         <td>span</td>
-        <td>sets inline segments apart</td>
+        <td>set inline segments apart</td>
         <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
         <td><span>Call me Ishmael.</span></td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list element</td>
+        <td>element inside a list</td>
+        <td><code>&lt;li&gt;bears&lt;/li&gt;</code></td>
+        <td>1. Bears</td>
       </tr>
     </table>
   </body>
