--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,10 +5,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <!-- much here to be styled, will do so in last section -->
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>      
+    </div>
+
     <header>
-      <h1>A Softcover Book Report</h1>
-      <h2>Moby Dick (or, The Whale)</h2>
+      <h1 style="text-align: center;">A Softcover Book Report</h1>
+      <h2 style="text-align: center;">Moby Dick (or, The Whale)</h2>
     </header>
     <div>
       <p>
@@ -33,7 +38,7 @@
   
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
       target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick">
+        <img src="images/moby_dick.png" alt="Moby Dick" size="200px">
       </a>
       
       <p>
@@ -43,9 +48,9 @@
         by Herman Melville begins with these immortal words:
       </p>
       
-      <blockquote>
+      <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span>Call me Ishmael.</span> Some years ago-never mind how long
+          <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">Call me Ishmael.</span> Some years ago-never mind how long
           precisely-having little or no money in my purse, and nothing
           particular to interest me on shore, I thought I would sail about a
           little and see the watery part of the world. It is a way I have of
