--- a/moby_dick.html
+++ b/moby_dick.html
@@ -1,15 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Moby Dick</title>
     <meta charset="utf-8">
   </head>
-  <body>
+  <body vlink="blue">
     <div style="text-align: right;">
-      <a href="index.html">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px">Moby Dick</a>      
+      <a href="index.html" style="text-decoration-line: none;">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;
+        text-decoration-line: none;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;
+        text-decoration-line: none;">Moby Dick</a>      
     </div>
 
     <header style="text-align: center; margin: 0 0 80px;">
