--- a/tags.html
+++ b/tags.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
   </head>
 
-  <body>
-    <div style="text-align: right">
-      <a href="index.html">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px">Moby Dick</a>
+  <body vlink="blue">
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration-line: none;">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;
+        text-decoration-line: none;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px;
+        text-decoration-line: none;">Moby Dick</a>
     </div>
 
     <h1>Important HTML Tags</h1>
@@ -71,9 +73,9 @@
         <td>include a table data cell</td>
       </tr>
       <tr>
-        <td><code>head</code></td>
+        <td><code>header</code></td>
         <td>header</td>
-        <td>mark header in HTML doc</td>
+        <td>set multiple headers appart</td>
       </tr>
       <tr>
         <td><code>div</code></td>
@@ -89,6 +91,16 @@
         <td><code>ul</code></td>
         <td>unordered list</td>
         <td>defaults to bullet point list</td>
+      </tr>
+      <tr>
+        <td><code>blockquote</code></td>
+        <td>block quotation</td>
+        <td>show formatted quotation</td>
+      </tr>
+      <tr>
+        <td><code>br</code></td>
+        <td>break</td>
+        <td>enter line break</td>
       </tr>
     </table>
     
@@ -144,6 +156,54 @@
         <td><code>&lt;li&gt;bears&lt;/li&gt;</code></td>
         <td>1. Bears</td>
       </tr>
+      <tr>
+        <td><code>code</code></td>
+        <td>code</td>
+        <td>display pieces of markup/source code</td>
+        <td><code>&lt;code&gt;&lt;!DOCTYPE html&gt;&lt;/code&gt;</code></td>
+        <td><code>&lt;!DOCTYPE html&gt;</code></td>
+      </tr>
     </table>
+
+    <h2>Document Elements</h2>
+    
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+      </tr>
+      <tr>
+        <td><code>html</code></td>
+        <td>language</td>
+        <td>container for HTML code</td>
+      </tr>
+      <tr>
+        <td><code>head</code></td>
+        <td>header container</td>
+        <td>container for metadata</td>
+      </tr>
+      <tr>
+        <td><code>body</code></td>
+        <td>body container</td>
+        <td>container for visible page content</td>
+      </tr>
+      <tr>
+        <td><code>title</code></td>
+        <td>page title</td>
+        <td>container for page's title</td>
+      </tr>
+      <tr>
+        <td><code>meta</code></td>
+        <td>metadata</td>
+        <td>define metadata in head</td>
+      </tr>
+      <tr>
+        <td><code>DOCTYPE</code></td>
+        <td>document type</td>
+        <td>irregular tag at start of page</td>
+      </tr>
+    </table>    
+
   </body>
 </html>
